sys/fs/nfs/nfs.h
@@ -288,6 +288,7 @@ struct nfsreferral {
 #define	LCL_ADMINREVOKED	0x00008000
 #define	LCL_RECLAIMCOMPLETE	0x00010000
 #define	LCL_NFSV41		0x00020000
+#define	LCL_DONEBINDCONN	0x00040000
 
 #define	LCL_GSS		LCL_KERBV	/* Or of all mechs */
 
